--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,13 @@
 ---secudaria:rgb(250, 235, 215);
 ---secundaria-clara: rgb(254, 245, 233);
 ---secundaria-escura: rgb(254, 215, 163);
----seundaria2:rgba(224, 192, 150, 0.692);}
+---seundaria2:rgba(224, 192, 150, 0.692);
+---black: #000;
+---grey:#CCCC;
+---white:#fff;
+
+
+}
 
 .main{
     background-color: var(---seundaria2);
@@ -99,7 +105,7 @@ a:hover{
 
 .img-3{
     height: 600px;
-    width: 650px;
+    width: 550px;
    margin: 5px;
 }
  
@@ -358,5 +364,147 @@ footer{
         
       } 
 
+
+
+      .formulario{
+        display: flex;
+        flex-direction: column;
+        margin: 10px;
+        padding: 300px;
+        
+      }
+
+      .conjunto{
+        justify-content: center;
+        text-align: center;
+      
+        margin-top: -850px;
+       margin-left: 500px;
+       
+    }
+
+    input:focus-visible{
+      outline: none;
+    }
+    
+    input{
+        padding: 2px;
+        font-size:15px;
+        font-family: 'Kanit', sans-serif;
+        border-radius: 13px;
+        border: 3px;
+        background-color: var(---grey);
+    } 
+
+      .nome, .email, .senha, .endereco, .telefone, .identidade, .cpf, .datanasc{
+        width: 700px;
+        height: 64px;
+        border-radius: 50px;
+        background: #D6D6D6;
+        color: #818181;
+        font-family: Kanit;
+        margin: 10px;
+        padding-left: 100px;
+        
+        
+        font-style: normal;
+        font-weight: 400;
+      }
+
+      .btn-cadastro{
+        width: 340px;
+        height: 59px;
+        border-radius: 32px;
+        background: #91009D;
+        border: 32px;
+        margin-left: 250px;
+      
+        
+        color: #FEF5E9;
+        text-align: center;
+        font-family: Kanit;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+
+      .titulo{
+        margin-top: -70px;
+        margin-left: 1000px;
+        width: 380px;
+        height: 62px;
+        color: #000;
+
+        text-align: end;
+        font-family: Kanit;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+
+      .japossui{
+        width: 278px;
+        height: 30px;
+        margin-left: 1080px ;
+        color: #818181;
+
+        text-align: end;
+        font-family: Kanit;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+
+      
+      }
+
+      .nomedocadastro{
+        width: 325px;
+        height: 132px;
+        color: #4B0052;
+
+        
+        text-align: center;
+        font-family: Kanit;
+        font-size: 96px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+
+        margin-top: -550px;
+        margin-left: 240px;
+
+      }
+
+      .imagemcliente{
+         margin-left: 150px;
+         width: 500px;
+         height: 500px;
+      }
+      
+      main{
+        padding: 60px;
+         margin-top: 50px;
+         
+     }
+    
+      /* #name{
+        background-image: url(../CSS/img/Person.png);
+        background-repeat: no-repeat;
+        background-position: 1.3rem;
+        padding-left: 1.3rem;
+        background-position-x: 1.3rem left;
+      }
+      #emailid{
+        background-image: url(../CSS/img/Letter.png);
+        background-repeat: no-repeat;
+        background-position: 1.3rem;
+        padding-left: 1.3rem;
+        background-position-x: 1.3rem left;
+      } */
+
+      
     
     
